<resources>
    <string name="app_name">SematecAndroidBasicMehr98</string>
    <string name="ok">OK</string>
    <string name="please_enter_your_age">Please enter your age</string>
    <string name="show_new_activity">show new activity</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="confirm">Confirm</string>
    <string name="show_website">Show Website</string>
    <string name="please_enter_your_family">Please enter your family</string>
    <string name="please_enter_your_grade">Please enter your grade</string>
    <string name="insert">insert</string>
    <string name="read">Read</string>
    <string name="show_alert_dialog">Show Alert Dialog</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
