<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/colorRed"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/please_enter_your_age"
        android:textColor="#FFF"
        android:textSize="30sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/ok"
        android:textColor="@color/colorGreen"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/edtAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:hint="@string/please_enter_your_age"
        android:inputType="number"
        android:maxLength="2"
        android:textColor="#0000FF"
        android:textColorHint="#0000FF"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/show_new_activity"
        android:textColor="@color/colorGreen"
        android:textSize="20sp" />


</LinearLayout>